--- a/Assignment1/Question_1.ipynb
+++ b/Assignment1/Question_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": 637,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "from sklearn.model_selection import KFold\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.linear_model import Ridge\n",
+    "from sklearn.linear_model import Lasso\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from math import sqrt"
    ]
@@ -1470,6 +1471,165 @@
    "metadata": {},
    "source": [
     "### Part b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 638,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lasso_model = Lasso(fit_intercept=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 639,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_lasso = GridSearchCV(estimator=lasso_model, param_grid=parameters,cv=5,verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 640,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    0.1s finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise',\n",
+       "       estimator=Lasso(alpha=1.0, copy_X=True, fit_intercept=False, max_iter=1000,\n",
+       "   normalize=False, positive=False, precompute=False, random_state=None,\n",
+       "   selection='cyclic', tol=0.0001, warm_start=False),\n",
+       "       fit_params=None, iid=True, n_jobs=1,\n",
+       "       param_grid={'alpha': [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0]},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=None, verbose=1)"
+      ]
+     },
+     "execution_count": 640,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_lasso.fit(new_X_train,new_Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 641,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = grid_lasso.best_estimator_.alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 643,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lasso_model = Lasso(alpha=alpha,fit_intercept=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 644,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Lasso(alpha=1.0, copy_X=True, fit_intercept=False, max_iter=1000,\n",
+       "   normalize=False, positive=False, precompute=False, random_state=None,\n",
+       "   selection='cyclic', tol=0.0001, warm_start=False)"
+      ]
+     },
+     "execution_count": 644,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lasso_model.fit(new_X_train,new_Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 645,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_pred = lasso_model.predict(new_X_train)\n",
+    "test_pred = lasso_model.predict(new_X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 646,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.077720823005557"
+      ]
+     },
+     "execution_count": 646,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_rmse = sqrt(mean_squared_error(new_Y_train, train_pred))\n",
+    "train_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 647,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.256437377129104"
+      ]
+     },
+     "execution_count": 647,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_rmse = sqrt(mean_squared_error(new_Y_test, test_pred))\n",
+    "test_rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part iii"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As RMSE value of Test and Train is simillar in all case we can say that none of the models are over fitting.\n",
+    "In three cases L2 regularization gets min RMSE followed by L1 and normal is last, this shows that regularization heps in getting a better fit on model, however none of the models is a under fit"
    ]
   },
   {
