--- a/Assignment 2/Assignment_2.ipynb
+++ b/Assignment 2/Assignment_2.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 757,
+   "execution_count": 788,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,6 @@
     "    x_min, x_max = X[:,0].min() - 1, X[:,0].max() + 1\n",
     "    y_min, y_max = X[:,1].min() - 1, X[:,1].max() + 1\n",
     "    xx, yy = np.meshgrid(np.arange(x_min, x_max, h), np.arange(y_min, y_max, h))\n",
-    "#     Z = clf.predict(np.c_[xx.ravel(), yy.ravel()])\n",
     "    Z = predict_own(clf,X,np.c_[xx.ravel(), yy.ravel()])\n",
     "    Z = Z.reshape(xx.shape)\n",
     "    plt.contourf(xx, yy, Z, cmap=plt.cm.coolwarm, alpha=0.8)\n",
@@ -335,16 +334,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 777,
+   "execution_count": 789,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_own(clf,X_train,X_test):\n",
+    "def predict_own(clf,X_train,X_test,return_distance = False):\n",
     "    coeff = clf.dual_coef_\n",
     "    support_vector_index = clf.support_\n",
     "    intercept = clf.intercept_\n",
     "    kernel = clf.kernel\n",
     "    values = np.dot(coeff,kernel(X_train[support_vector_index],X_test))+intercept\n",
+    "    if return_distance:\n",
+    "        return values\n",
     "    values = values>=0\n",
     "    return values[0].astype(int)"
    ]
@@ -475,12 +476,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 746,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "?np.c_"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -505,51 +518,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# def predict_own(clf,X,Y,test_sample):\n",
-    "# #     print(test_sample)\n",
-    "#     support_vector_index = clf.support_\n",
-    "#     index_of_class_0_support_vectors = [i for i in support_vector_index if Y[i]==0]\n",
-    "#     index_of_class_1_support_vectors = [i for i in support_vector_index if Y[i]==1]\n",
-    "# #     print(len(index_of_class_0_support_vectors),len(index_of_class_1_support_vectors))\n",
-    "#     class0_support_vectors = X[index_of_class_0_support_vectors]\n",
-    "#     class1_support_vectors = X[index_of_class_1_support_vectors]\n",
-    "    \n",
-    "#     distance_class0 = 0\n",
-    "#     distance_class1 = 0\n",
-    "    \n",
-    "#     for v in class0_support_vectors:\n",
-    "#         distance_class0+= np.linalg.norm(v-test_sample)\n",
-    "    \n",
-    "#     for v in class1_support_vectors:\n",
-    "#         distance_class1+= np.linalg.norm(v-test_sample)\n",
-    "# #     print(distance_class1,distance_class0)\n",
-    "#     if distance_class0>=distance_class1:\n",
-    "#         return 1\n",
-    "#     else:\n",
-    "#         return 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 286,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pred_val = [predict_own(clf,X,Y,sample) for sample in X]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# accuracy_score(Y,pred_val)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
