--- a/Assignment 2/Assignment_2.ipynb
+++ b/Assignment 2/Assignment_2.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,6 @@
     "    number_of_classes = len(np.unique(Y_train))\n",
     "    pred_matrix = np.zeros((len(X_test),3))\n",
     "    for i in range(number_of_classes):\n",
-    "#         print(i)\n",
     "        y_train = np.where(Y_train==i,1,0)\n",
     "        clf = fit_binary_classifier(X_train,y_train,kernel)\n",
     "        pred = predict_own(clf,X_train,X_test,return_distance=True)\n",
@@ -832,7 +831,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part (iii)"
+    "## Part (iii) and (iv)"
    ]
   },
   {
@@ -844,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +870,7 @@
        "((80, 2), (80,), (20, 2), (20,))"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +908,45 @@
        "0.4"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 343,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(Y_test,pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 344,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = fit_binary_classifier(X_train,Y_train,closure_function_rbf())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = predict_own(clf,X_train,X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +991,7 @@
        "((80, 2), (80,), (20, 2), (20,))"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +1029,45 @@
        "0.8"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 352,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(Y_test,pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = fit_binary_classifier(X_train,Y_train,closure_function_rbf())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = predict_own(clf,X_train,X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.95"
+      ]
+     },
+     "execution_count": 355,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1121,36 @@
        "1.0"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 380,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(Y_test,pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 381,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = one_vs_one(X_train,Y_train,X_test,closure_function_rbf())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1204,36 @@
        "0.95"
       ]
      },
-     "execution_count": 312,
+     "execution_count": 396,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(Y_test,pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 397,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = one_vs_rest(X_train,Y_train,X_test,closure_function_rbf())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 399,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.95"
+      ]
+     },
+     "execution_count": 399,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1278,7 @@
        "((1600, 2), (1600,), (400, 2), (400,))"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 403,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,33 +1289,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = fit_binary_classifier(X,Y,linear_kernel)"
+    "clf = fit_binary_classifier(X_train,Y_train,linear_kernel)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 405,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = predict_own(clf,X_train,X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 406,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "index 1602 is out of bounds for axis 0 with size 1600",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-318-2221d908216a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict_own\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-206-7ce964dbe48c>\u001b[0m in \u001b[0;36mpredict_own\u001b[0;34m(clf, X_train, X_test, return_distance)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mintercept\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintercept_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mkernel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkernel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoeff\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkernel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msupport_vector_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mintercept\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mreturn_distance\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 1602 is out of bounds for axis 0 with size 1600"
-     ]
+     "data": {
+      "text/plain": [
+       "0.5275"
+      ]
+     },
+     "execution_count": 406,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "accuracy_score(Y_test,pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 407,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = fit_binary_classifier(X_train,Y_train,closure_function_rbf())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 408,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pred = predict_own(clf,X_train,X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 409,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8875"
+      ]
+     },
+     "execution_count": 409,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(Y_test,pred)"
    ]
   },
   {
