dataset reading done

--- a/Assignment 2/Assignment_2.ipynb
+++ b/Assignment 2/Assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from os import listdir\n",
     "import itertools\n",
     "from PIL import Image\n",
     "%matplotlib inline "
@@ -1165,32 +1166,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 471,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = Image.open(\"foo.png\").convert('L')\n",
-    "arr = np.array(img.getdata(), dtype=np.uint8)"
+    "train_set_location = 'Hindi_dataset/Train_val/'\n",
+    "test_set_location = 'Hindi_dataset/Test/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 472,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_image(image_location):\n",
+    "    img = Image.open(image_location).convert('L')\n",
+    "    return np.array(img.getdata(), dtype=np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 486,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_train_set(train_set_location):\n",
+    "    class_names = listdir(train_set_location)\n",
+    "    X = np.empty([1700*len(class_names),1024])\n",
+    "    Y = np.empty([1700*len(class_names),])\n",
+    "    for class_number,name in enumerate(class_names):\n",
+    "        for i,image_name in enumerate(listdir(train_set_location+name)):\n",
+    "            X[class_number*1700 + i] = read_image(train_set_location+name+\"/\"+image_name)\n",
+    "            Y[class_number*1700 + i] = class_number\n",
+    "    return X,Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 491,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_test_set(test_set_location):\n",
+    "    class_names = listdir(test_set_location)\n",
+    "    X = np.empty([300*len(class_names),1024])\n",
+    "    Y = np.empty([300*len(class_names),])\n",
+    "    for class_number,name in enumerate(class_names):\n",
+    "        for i,image_name in enumerate(listdir(test_set_location+name)):\n",
+    "            X[class_number*300 + i] = read_image(test_set_location+name+\"/\"+image_name)\n",
+    "            Y[class_number*300 + i] = class_number\n",
+    "    return X,Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 488,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X,Y = read_train_set(train_set_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 489,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1024,)"
+       "((8500, 1024), (8500,))"
       ]
      },
-     "execution_count": 449,
+     "execution_count": 489,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr.shape[:]"
+    "X.shape,Y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 492,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test,Y_test = read_test_set(test_set_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 493,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1500, 1024), (1500,))"
+      ]
+     },
+     "execution_count": 493,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape,Y_test.shape"
    ]
   },
   {
