part v setup done

--- a/Assignment 2/Assignment_2.ipynb
+++ b/Assignment 2/Assignment_2.ipynb
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 514,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,18 +1176,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 515,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_image(image_location):\n",
     "    img = Image.open(image_location).convert('L')\n",
-    "    return np.array(img.getdata(), dtype=np.uint8)"
+    "    arr = np.array(img.getdata(), dtype=np.uint8)\n",
+    "    arr[arr>0] = 1\n",
+    "    return arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 516,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 517,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,16 +1223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 518,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X,Y = read_train_set(train_set_location)"
+    "X_train,Y_train = read_train_set(train_set_location)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 519,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1241,7 @@
        "((8500, 1024), (8500,))"
       ]
      },
-     "execution_count": 489,
+     "execution_count": 519,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 520,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 521,
    "metadata": {},
    "outputs": [
     {
@@ -1268,13 +1270,68 @@
        "((1500, 1024), (1500,))"
       ]
      },
-     "execution_count": 493,
+     "execution_count": 521,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X_test.shape,Y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 522,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = SVC(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LibSVM]"
+     ]
+    }
+   ],
+   "source": [
+    "clf.fit(X_train,Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 503,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 504,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2"
+      ]
+     },
+     "execution_count": 504,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(Y_test,pred)"
    ]
   },
   {
