refactor reading function

--- a/Assignment 2/Assignment_2.ipynb
+++ b/Assignment 2/Assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,99 +1189,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_train_set(train_set_location):\n",
-    "    class_names = listdir(train_set_location)\n",
-    "    X = np.empty([1700*len(class_names),1024])\n",
-    "    Y = np.empty([1700*len(class_names),])\n",
+    "def read_data_set(data_location,test_set_flag=False):\n",
+    "    class_names = listdir(data_location)\n",
+    "    sample_per_class = 1700\n",
+    "    if test_set_flag:\n",
+    "        sample_per_class=300\n",
+    "    X = np.empty([sample_per_class*len(class_names),1024])\n",
+    "    Y = np.empty([sample_per_class*len(class_names),])\n",
     "    for class_number,name in enumerate(class_names):\n",
-    "        for i,image_name in enumerate(listdir(train_set_location+name)):\n",
-    "            X[class_number*1700 + i] = read_image(train_set_location+name+\"/\"+image_name)\n",
-    "            Y[class_number*1700 + i] = class_number\n",
+    "        for i,image_name in enumerate(listdir(data_location+name)):\n",
+    "            X[class_number*sample_per_class + i] = read_image(data_location+name+\"/\"+image_name)\n",
+    "            Y[class_number*sample_per_class + i] = class_number\n",
     "    return X,Y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_test_set(test_set_location):\n",
-    "    class_names = listdir(test_set_location)\n",
-    "    X = np.empty([300*len(class_names),1024])\n",
-    "    Y = np.empty([300*len(class_names),])\n",
-    "    for class_number,name in enumerate(class_names):\n",
-    "        for i,image_name in enumerate(listdir(test_set_location+name)):\n",
-    "            X[class_number*300 + i] = read_image(test_set_location+name+\"/\"+image_name)\n",
-    "            Y[class_number*300 + i] = class_number\n",
-    "    return X,Y"
+    "# def read_test_set(test_set_location):\n",
+    "#     class_names = listdir(test_set_location)\n",
+    "#     X = np.empty([300*len(class_names),1024])\n",
+    "#     Y = np.empty([300*len(class_names),])\n",
+    "#     for class_number,name in enumerate(class_names):\n",
+    "#         for i,image_name in enumerate(listdir(test_set_location+name)):\n",
+    "#             X[class_number*300 + i] = read_image(test_set_location+name+\"/\"+image_name)\n",
+    "#             Y[class_number*300 + i] = class_number\n",
+    "#     return X,Y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train,Y_train = read_train_set(train_set_location)"
+    "X_train,Y_train = read_data_set(train_set_location)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test,Y_test = read_data_set(test_set_location,test_set_flag=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((8500, 1024), (8500,))"
+       "((8500, 1024), (8500,), (1500, 1024), (1500,))"
       ]
      },
-     "execution_count": 519,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X.shape,Y.shape"
+    "X_train.shape,Y_train.shape,X_test.shape,Y_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test,Y_test = read_test_set(test_set_location)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 521,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1500, 1024), (1500,))"
-      ]
-     },
-     "execution_count": 521,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test.shape,Y_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1299,6 +1282,19 @@
      "text": [
       "[LibSVM]"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=True)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1307,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,16 +1312,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2"
+       "0.9413333333333334"
       ]
      },
-     "execution_count": 504,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
