--- a/Assignment 2/Assignment_2.ipynb
+++ b/Assignment 2/Assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "from os import listdir\n",
     "import itertools\n",
     "from PIL import Image\n",
+    "from sklearn.model_selection import KFold\n",
     "%matplotlib inline "
    ]
   },
@@ -1264,35 +1265,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = SVC(verbose=True)"
+    "kfold = KFold(5, True, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation_results =[]\n",
+    "train_results = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for train,validation in kfold.split(X_train):\n",
+    "    x_t = X_train[train]\n",
+    "    y_t = Y_train[train]\n",
+    "    x_v = X_train[validation]\n",
+    "    y_v = Y_train[validation]\n",
+    "    clf = SVC()\n",
+    "    clf.fit(x_t,y_t)\n",
+    "    pred_t = clf.predict(x_t)\n",
+    "    pred_v = clf.predict(x_v)\n",
+    "    validation_results.append(accuracy_score(y_v,pred_v))\n",
+    "    train_results.append(accuracy_score(y_t,pred_t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[LibSVM]"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "[0.9460294117647059,\n",
+       " 0.9454411764705882,\n",
+       " 0.9436764705882353,\n",
+       " 0.9452941176470588,\n",
+       " 0.9494117647058824]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9258823529411765,\n",
+       " 0.9323529411764706,\n",
+       " 0.9388235294117647,\n",
+       " 0.9376470588235294,\n",
+       " 0.9211764705882353]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validation_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Train set accuarcy = 0.9459705882352942 ± 0.0018892337473825611'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"Train set accuarcy = {np.mean(train_results)} ± {np.std(train_results)}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Validation set accuarcy = 0.9311764705882354 ± 0.006778757783947269'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"Validation set accuarcy = {np.mean(validation_results)} ± {np.std(validation_results)}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = SVC()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
        "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
        "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
        "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-       "  tol=0.001, verbose=True)"
+       "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
